# FlashSeg

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: flashseg_l_512_ade20k.yaml  flashseg_m_512_lora.yaml  flashseg_m_512_voc.yaml  flashseg_s_256_cityscapes.yaml
docker/: Dockerfile  docker-compose.yml
docs/: FAQ.md  Home.md  Installation.md  Models.md  Quick-Start.md  Solutions.md
examples/: background_removal.py  benchmark_model.py  export_onnx.py  predict_image.py  train_voc.py
flashseg/: __init__.py  cli.py
flashseg/analytics/: __init__.py  benchmark.py  profiler.py
flashseg/cfg/: __init__.py  config.py
flashseg/data/: __init__.py  dataset.py  transforms.py
flashseg/engine/: __init__.py  exporter.py  predictor.py  trainer.py  validator.py
flashseg/losses/: __init__.py  seg_losses.py
flashseg/models/: __init__.py  build.py
flashseg/models/architectures/: __init__.py  mask2former.py  sam.py  sam2.py
flashseg/models/backbone/: __init__.py  shufflenetv2.py
flashseg/models/head/: __init__.py  seg_head.py
flashseg/models/neck/: __init__.py  fpn.py
flashseg/nn/: __init__.py  blocks.py
flashseg/solutions/: __init__.py  area_calculator.py  background_remover.py  lane_detector.py  scene_parser.py
flashseg/tasks/: __init__.py  instance.py  interactive.py  panoptic.py
flashseg/utils/: __init__.py  metrics.py  visualization.py
tests/: test_architectures.py  test_comprehensive.py  test_losses.py  test_models.py  test_tasks.py
