[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flashseg"
version = "1.0.0"
description = "Ultra-lightweight real-time image segmentation with LoRA fine-tuning & Knowledge Distillation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [{name = "FlashVision", email = "flashvision@github.com"}]
keywords = ["segmentation", "semantic-segmentation", "instance-segmentation", "deep-learning", "edge-ai", "real-time", "lightweight"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "numpy>=1.21",
    "opencv-python>=4.5",
    "Pillow>=9.0",
    "PyYAML>=6.0",
    "tqdm>=4.60",
]

[project.optional-dependencies]
export = ["onnx>=1.12", "onnxruntime>=1.13", "onnxsim>=0.4"]
analytics = ["matplotlib>=3.5", "seaborn>=0.12", "pandas>=1.4"]
solutions = ["shapely>=2.0"]
all = ["flashseg[export,analytics,solutions]"]
dev = ["ruff>=0.1", "pytest>=7.0", "pre-commit>=3.0"]

[project.scripts]
flashseg = "flashseg.cli:main"

[project.urls]
Homepage = "https://github.com/FlashVision/FlashSeg"
Repository = "https://github.com/FlashVision/FlashSeg"
Documentation = "https://github.com/FlashVision/FlashSeg#readme"
Issues = "https://github.com/FlashVision/FlashSeg/issues"

[tool.setuptools.packages.find]
include = ["flashseg*"]

[tool.ruff]
target-version = "py38"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
